COmmit all new changes?

--- a/androidApp/app/src/main/res/values/strings.xml
+++ b/androidApp/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
-    <string name="app_name">Androbuzz</string>
-    <string name="title_main_activity">Firebase</string>
+    <string name="app_name">CDL</string>
+    <string name="title_main_activity">Registrations</string>
+    <string name="regsuccess">Registration Successful</string>
+    <string name="regfail">Registration failed. Tap to retry.</string>
+    <string name="checking">Checking registration status...</string>
+    <string name="alreadyregistered">Device Registered (Tap to register again)</string>
+    <string name="vibrationPatternSkip">5</string>
+    <string name="notRegistered">Device not registered or token mismatch.\Attempting registration...</string>
+    <string name="tokenNotGood">Token mismatch. Updating registration...</string>
 </resources>
